--- a/pages/home.html
+++ b/pages/home.html
@@ -14,17 +14,21 @@
 <body>
     <header>
         <nav class="nav-bar">
-            <a href="home.html"><img class="logo" src="../images/logo.PNG" alt="logo"></a>
-            <input type="checkbox" id="check">
-            <ul class="menu">
-                <li href="#"><a class="menu-link">Home</a></li>
-                <li href="#"><a class="menu-link">About</a></li>
-                <li href="#"><a class="menu-link">Resources</a></li>
-                <li href="#"><a class="menu-link">Contact</a></li>
-                <li><a class="login-button" href="login.html">Login</a></li>
-                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
-            </ul>
+            <a href="home.html"><img class="logo" src="/images/logo.PNG" alt="logo"></a>
+            <input class="checkbox" type="checkbox" id="check">
             <label for="check" class="open-menu"><i class="fas fa-bars"></i></label>
+            <div class="menu">
+                <label for="check" class="close-menu"><i class="fas fa-times"></i></label>
+                <div class="links-container">
+                <ul class="menu-links">
+                    <li href="#"><a class="menu-link">Home</a></li>
+                    <li href="#"><a class="menu-link">About</a></li>
+                    <li href="#"><a class="menu-link">Resources</a></li>
+                    <li href="#"><a class="menu-link">Contact</a></li>
+                </ul>
+                <a class="login-button" href="login.html">Login</a>
+            </div>
+            </div>
         </nav>
     </header>
     <main>
